# pine5-gateway

./: Cargo.toml
data/: Cargo.toml
data/src/: lib.rs
interfaces/: decoder_plugin.wit
linker/: Cargo.toml
linker/src/: lib.rs
pine5-gateway/: Cargo.toml
pine5-gateway-core/: Cargo.toml
pine5-gateway-core/src/: lib.rs
pine5-gateway/src/: main.rs  model.rs  plugins.rs
pine5-gateway/src/plugin/: decoder.rs
pine5-gateway/src/service/: status.rs
plugins/decoder/: Cargo.toml  bindings.rs
plugins/decoder/src/: lib.rs
proto/: cm.proto
server/: Cargo.toml
server/src/: main.rs  plugins.rs
src/: web_api.rs
src/service/: status.rs
