[package]
name = "pine5-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
warp = "0.3"
hyper = "0.14"
futures = "0.3"
tonic = "0.7"
prost = "0.10"
