[package]
name = "pine5-gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
tower = { version = "0.4", features = ["full"] }
warp = "0.3"
hyper = "0.14"
futures = "0.3"
tonic = "0.7"
prost = "0.10"
libloading = "0.7.3"
anyhow = "1.0.58"
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
# wasm
wit-bindgen-wasmtime = { git = "https://github.com/bytecodealliance/wit-bindgen" }
wasmtime = "0.38"
wasmtime-wasi = "0.38"
